--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DigitalForce"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".common.DigitalForce">
         <activity
             android:name=".MainActivity"
             android:exported="true"
