--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
 
     //librerias externas
+    implementation 'org.jsoup:jsoup:1.15.1'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'com.airbnb.android:lottie:5.2.0'
 
