--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.skysam.hchirinos.digitalforce">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".common.DigitalForce"
@@ -19,6 +18,11 @@
         android:theme="@style/Theme.DigitalForce"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.sales.newSale.NewSaleActivity"
+            android:exported="false"
+            android:label="@string/title_activity_new_sale"
+            android:theme="@style/Theme.DigitalForce"/>
         <activity
             android:name=".ui.init.LoginActivity"
             android:exported="true"
@@ -35,8 +39,7 @@
             android:label="@string/action_settings" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
